[package]
authors = [
  "Wouter Geraedts <git@woutergeraedts.nl>",
  "Leon Botros <l.botros@cs.ru.nl>"
]
categories = ["cryptography", "no-std"]
description = "Identity Based Encryption schemes on the BLS12-381 pairing-friendly elliptic curve"
edition = "2021"
keywords = ["ibe", "encryption", "ecc", "no_std"]
license = "MIT"
name = "ibe"
repository = "https://github.com/encryption4all/ibe"
version = "0.2.2"

[dependencies]
arrayref = "0.3.6"
group = "0.12.1"
rand_core = { version = "^0.6", default-features = false }
irmaseal-curve = { version = "0.1.4", features = [
  "alloc",
  "group",
  "pairings"
] }
byteorder = { version = "1.3", default-features = false }
subtle = { version = "2.4.1", default-features = false }
tiny-keccak = { version = "2.0.2", features = ["sha3", "shake"] }

[dev-dependencies]
rand = "0.8.4"
criterion = "0.3.5"
paste = "1.0.5"

[features]
boyen_waters = []
cgw = []
cgwfo = ["cgw"]
cgwkv = []
kv1 = []
waters = []
waters_naccache = []
mkem = []

[lib]
bench = false
doctest = false

[[bench]]
harness = false
name = "main"
required-features = [
  "kv1",
  "cgwfo",
  "cgwkv",
  "boyen_waters",
  "waters",
  "waters_naccache",
  "mkem"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
