[package]
authors = [
  "Wouter Geraedts <git@woutergeraedts.nl>",
  "Leon Botros <l.botros@cs.ru.nl>"
]
categories = ["cryptography", "no-std"]
description = "Identity Based Encryption schemes on the BLS12-381 pairing-friendly elliptic curve"
edition = "2021"
keywords = ["ibe", "encryption", "ecc", "no_std"]
license = "MIT"
name = "ibe"
repository = "https://github.com/encryption4all/ibe"
version = "0.3.0"

[dependencies]
arrayref = "0.3.9"
group = "0.13"
rand = { version = "0.8.6", default-features = false }
pg-curve = { version = "0.2.0", features = [
  "alloc",
  "group",
  "pairings"
] }
subtle = { version = "2.6.1", default-features = false }
tiny-keccak = { version = "2.0.2", features = ["sha3", "shake"] }
# aes-gcm >= 0.10.3 fixes RUSTSEC-2023-0096 / CVE-2023-42811.
aes-gcm = { version = "0.10.3", optional = true }
zeroize = { version = "1.7", default-features = false, features = ["derive"], optional = true }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
rand = "0.8.6"
criterion = "0.8.2"
pastey = "0.2.3"

[features]
boyen_waters = []
cgw = []
cgwfo = ["cgw"]
cgwkv = []
kv1 = []
waters = []
waters_naccache = []
mkem = ["aes-gcm"]
zeroize = ["dep:zeroize", "pg-curve/zeroize"]

[lib]
bench = false
doctest = false

[[bench]]
harness = false
name = "main"
required-features = [
  "kv1",
  "cgwfo",
  "cgwkv",
  "boyen_waters",
  "waters",
  "waters_naccache",
  "mkem"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
